Keep but skip deleted nodes